Fixed officer image dragging and background color for scroll/overflow.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -29,3 +29,7 @@ h1, h2, h3 {
     text-transform: uppercase;
     font-weight: 600;
 }
+
+body {
+    background-color: $EerieBlack;
+}
